# zoeaubert.me

./: .babelrc  .eleventy.js  .gitignore  .markdownlint.json  .prettierrc  CNAME  Cargo.toml  LICENSE  MAKEFILE  README.md  _config.yml  build.rs  config.json  docker-compose.yml  gatsby-browser.js  gatsby-config.js  gatsby-node.js  justfile  makefile  package-lock.json  package.json  sass-lint.yml  site_config.json  styles-20241020230419.css  tailwind.config.js  webpack.config.js
backend/: Cargo.toml
backend/src/: main.rs
cli/: Cargo.toml  justfile
cli/src/: api_client.rs  error.rs  main.rs  upload.rs
cli/src/commands/: upload.rs
cli/src/microblog_archive/: error.rs  mod.rs  upload_microblog_archive_posts.rs
cli/src/microposts/: error.rs  mod.rs  upload_micro_posts.rs
cli/src/silly_names/: error.rs  mod.rs  upload_silly_names.rs
cli/src/utils/: api_client.rs  content_dir.rs  fs.rs  image_extraction.rs  mod.rs
frontend/: Cargo.toml
shared/: Cargo.toml  build.rs
shared/proto/: zoeaubert.proto
shared/proto/webserver/: image.proto  micro_posts.proto  silly_names.proto  zoeaubert-webserver.proto
shared/src/: cache.rs  lib.rs
shared/src/api_definitions/: mod.rs  silly_names.rs
shared/src/utils/: date.rs
webserver/: Cargo.toml  build.rs  justfile  tailwind.config.js
webserver/assets/: lego.json  movies.json  tv.json
webserver/assets/css/: styles.css
webserver/migrations/: 20240728114338_create_status_lol_table.down.sql  20240728201934_create_game_and_achievements_tables.down.sql  20240728225246_create_lego_sets_and_minifig_tables.down.sql  20240730182120_create_image_table.up.sql  20240730183134_create_album_photo_table.down.sql  20240730183134_create_album_photo_table.up.sql  20240730183419_create_tags_table.down.sql  20240804100813_create_silly_names_table.down.sql  20240804100813_create_silly_names_table.up.sql  20240813223009_create_microposts_table.down.sql  20240813223009_create_microposts_table.up.sql
webserver/src/: error.rs  main.rs  prelude.rs
webserver/src/application/: mod.rs
webserver/src/application/commands/: mod.rs  update_silly_names_command.rs
webserver/src/application/events/: mod.rs
webserver/src/application/jobs/: mod.rs
webserver/src/domain/models/: faq.rs  game_achievement.rs  lego.rs  mastodon_post.rs  micro_post.rs  mod.rs  omni_post.rs  page.rs  silly_name.rs
webserver/src/infrastructure/: app_state.rs  mod.rs
webserver/src/infrastructure/bus/: event_queue.rs  logger_listener.rs  mod.rs
webserver/src/infrastructure/formatters/: format_date.rs  format_markdown.rs  mod.rs
webserver/src/infrastructure/listeners/: faq_listener.rs  games_listener.rs  mastodon_posts_listener.rs  micro_posts_listener.rs  mod.rs  status_lol_listener.rs
webserver/src/infrastructure/query_services/: album_photos_query_service.rs  games_query_service.rs  images_query_service.rs  media_query_service.rs  micro_posts_query_service.rs  mod.rs  omni_post_query_service.rs  silly_names_query_service.rs  tags_query_service.rs
webserver/src/infrastructure/repos/: about_repo.rs  blog_posts_repo.rs  faq_repo.rs  game_achievements_repo.rs  games_repo.rs  images_repo.rs  lego_minifigs_repo.rs  micro_posts_repo.rs  microblog_archive_repo.rs  mod.rs  silly_names_repo.rs  status_lol_repo.rs  tags_repo.rs
webserver/src/infrastructure/services/: album.rs  auth_service.rs  cdn.rs  content_dir.rs  date.rs  extract_media.rs  files.rs  formatters.rs  mod.rs
webserver/src/routes/: mod.rs
webserver/src/routes/api/: mod.rs
webserver/src/routes/grpc/: micro_posts_grpc_service.rs  mod.rs  silly_names_grpc_service.rs
webserver/src/routes/web/: albums.rs  blog.rs  micro_posts.rs  mod.rs  photos.rs  tags.rs  timeline.rs
webserver/templates/: faq.html  photos.html
webserver/templates/albums/: all_photos.html
webserver/templates/blog/: post.html
webserver/templates/interests/: lego_list.html
webserver/templates/interests/games/: game.html  games_list.html
webserver/templates/partials/: base.html  footer.html  games_list_game.html  navbar.html  page_header.html  pagination.html
webserver/templates/partials/omni_post/: omni_post.html  omni_post_blog_post.html  omni_post_status_lol.html
webserver/templates/tags/: index.html
zaw/: Cargo.toml  build.rs  justfile  site_config.json
zaw/assets/: robots.txt
zaw/assets/css/: styles.css
zaw/src/: error.rs  main.rs
zaw/src/application/commands/: mod.rs  update_all_data.rs
zaw/src/domain/: mod.rs  repositories.rs  services.rs  state.rs
zaw/src/domain/models/: blog_post.rs  cache_path.rs  image.rs  lego.rs  mastodon_post.rs  media.rs  micro_post.rs  mod.rs  omni_post.rs  page.rs  site_config.rs  slug.rs  tag.rs
zaw/src/domain/queries/: about_queries.rs  blog_post_queries.rs  lego_queries.rs  mastodon_queries.rs  mod.rs  omni_post_queries.rs  silly_names_queries.rs  tags_queries.rs
zaw/src/infrastructure/: app_state.rs  mod.rs
zaw/src/infrastructure/renderers/: blog_pages.rs  home_page.rs  interests_page.rs  lego_pages.rs  mastodon_post_pages.rs  micro_post_pages.rs  mod.rs  tags_pages.rs  timeline_pages.rs
zaw/src/infrastructure/repositories/: about_text_repo_memory.rs  blog_posts_repo_memory.rs  lego_repo_disk.rs  mastodon_post_repo_disk.rs  mod.rs  profiler_memory.rs
zaw/src/infrastructure/services/: cache_service_disk.rs  cdn_service_bunny.rs  mod.rs
zaw/src/infrastructure/utils/: file_system.rs  image_extractor.rs  mod.rs  networking.rs  paginator.rs
zaw/src/models/: blog_post.rs  image.rs  media.rs  mod.rs  page.rs  tag.rs
zaw/src/renderers/: home_page.rs  mod.rs
zaw/src/renderers/formatters/: format_markdown.rs  format_number.rs
zaw/src/tasks/: build_site.rs  mod.rs
zaw/templates/albums/: index.html
zaw/templates/interests/: lego_list.html
zaw/templates/mastodon_posts/: post.html
zaw/templates/micro_posts/: post.html
zaw/templates/partials/: base.html  blog_post_list_item.html  footer.html  page.html  pagination.html  tags_list.html
zaw/templates/partials/media/: image.html
zaw/templates/partials/omni_post/: omni_post.html  omni_post_blog_post.html
(+1337 files in other folders)
