[package]
name = "zoeaubert-website"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.83.0"

[profile.dev.package.askama_derive]
opt-level = 3

[dependencies]
askama = { version = "0.12.1" }
askama-filters = "0.1.3"
askama_escape = "0.10.3"
async-trait = "0.1.77"
bitflags = "2.6.0"
chrono = { version = "0.4.31", features = ["serde", "std"] }
clap = { version = "4.5.23", features = ["derive"] }
comrak = { version = "0.24.1", features = [
    "emojis",
    "shortcodes",
    "arbitrary",
] }
csv = "1.3.0"
dircpy = "0.3.19"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures = "0.3.31"
html-escape = "0.2.13"
htmlentity = "1.3.2"
http-range-header = "0.4.0"
image = "0.25.2"
imagesize = "0.13.0"
lazy_static = "1.4.0"
markdown = "0.3.0"
once_cell = "1.20.2"
rayon = "1.10.0"
regex = "1.10.3"
reqwest = { version = "0.12.4", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.32"
syntect = "5.2.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tonic = "0.12.1"
tonic-build = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "v5"] }

[build-dependencies]
chrono = { version = "0.4.31", features = ["serde", "std"] }
