[package]
name = "zoeaubert-website"
version = "0.1.0"
edition = "2024"
build = "build.rs"
rust-version = "1.91.1"

[profile.dev.package.askama_derive]
opt-level = 3

[dependencies]
askama = { version = "0.14.0" }
askama-filters = "0.1.3"
askama_escape = "0.13.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde", "std"] }
clap = { version = "4.5.51", features = ["derive"] }
comrak = { version = "0.48.0", features = [
    "emojis",
    "shortcodes",
    "arbitrary",
] }
csv = "1.4.0"
dircpy = "0.3.19"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures = "0.3.31"
html-escape = "0.2.13"
htmlentity = "1.3.2"
http-range-header = "0.4.2"
hypertext = "0.12.1"
image = "0.25.9"
imagesize = "0.14.0"
inquire = { version = "0.9.1", features = ["chrono", "date", "editor"] }
lazy_static = "1.5.0"
markdown = "1.0.0"
maud = "0.27.0"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syntect = "5.3.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }

[build-dependencies]
chrono = { version = "0.4.42", features = ["serde", "std"] }
