[package]
name = "zoeaubert-website"
version = "0.1.0"
edition = "2024"
build = "build.rs"
rust-version = "1.91.1"

[features]
env-variables = []

[profile.dev.package.askama_derive]
opt-level = 3

[dependencies]
askama = { version = "0.15.4" }
chrono = { version = "0.4.43", features = ["serde", "std"] }
clap = { version = "4.5.58", features = ["derive"] }
comrak = { version = "0.50.0", features = [
    "emojis",
    "shortcodes",
    "arbitrary",
] }
csv = "1.4.0"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
dircpy = "0.3.19"
dotenvy_macro = "0.15.7"
governor = "0.10.4"
html-escape = "0.2.13"
htmlentity = "1.3.2"
hypertext = "0.12.1"
image = "0.25.9"
imagesize = "0.14.0"
inquire = { version = "0.9.3", features = ["chrono", "date", "editor"] }
lazy_static = "1.5.0"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
    "json",
    "multipart",
    "stream",
    "blocking",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = "5.3.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "json",
] }
url = { version = "2.5.8", features = ["serde"] }

[build-dependencies]
chrono = { version = "0.4.43", features = ["serde", "std"] }
