[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
axum = "0.6.18"
dioxus = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-ssr = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-fullstack = { git = "https://github.com/dioxuslabs/dioxus.git", features = [
    "axum",
] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
common = { path = "../common" }

[dev-dependencies]
httpc-test = "0.1.5"
