[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { workspace = true }
dotenvy_macro = { workspace = true }
clap = { version = "4.5.13", features = ["derive"] }
csv = "1.3.0"
reqwest = { workspace = true }
serde = { workspace = true }
shared = { path = "../shared" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
