[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { workspace = true }
dotenvy_macro = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.13", features = ["derive"] }
csv = "1.3.0"
image = { workspace = true }
imagesize = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shared = { path = "../shared" }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
http = "1.1.0"
uuid = { workspace = true }
