[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus.git" }
common = { path = "../common" }
