[package]
name = "shared"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait = { workspace = true }
dotenvy = { workspace = true }
dotenvy_macro = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
imagesize = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-reflection = "0.12.1"

[build-dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
