[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.78.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
askama = { version = "0.12.1" }
askama-filters = "0.1.3"
askama_axum = "0.4.0"
askama_escape = "0.10.3"
async-trait = "0.1.77"
axum = "0.7.4"
axum-extra = { version = "0.9.2" }
bitflags = "2.6.0"
chrono = { workspace = true }
comrak = { version = "0.24.1", features = [
    "emojis",
    "shortcodes",
    "arbitrary",
] }
dotenvy = { workspace = true }
dotenvy_macro = { workspace = true }
html-escape = "0.2.13"
http-range-header = "0.4.0"
image = "0.25.2"
imagesize = "0.13.0"
lazy_static = { workspace = true }
markdown = "0.3.0"
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.32"
shared = { path = "../shared" }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "json",
    "uuid",
    "chrono",
] }
syntect = "5.2.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.11", features = ["codec"] }
tonic = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = [
    "cors",
    "fs",
    "normalize-path",
    "util",
] }
tower-livereload = "0.9.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
