[package]
name = "zaw"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.78.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
syntect = "5.2.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.11", features = ["codec"] }
tonic = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = [
    "cors",
    "fs",
    "normalize-path",
    "util",
] }
tower-livereload = "0.9.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { version = "2.5.2", features = ["serde"] }

[build-dependencies]
chrono = { workspace = true }
